--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/caisser/movies-api#readme",
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "mongodb": "^4.3.0"
