--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "DEBUG=app:* nodemon index.js",
     "start": "NODE_ENV=production node index.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "mocha --exit",
+    "cover": "nyc npm run test",
+    "report": "nyc report --reporter=html && open coverage/index.html"
   },
   "repository": {
     "type": "git",
@@ -32,10 +35,19 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.1"
+    "nyc": "^15.1.0",
+    "prettier": "^2.5.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^12.0.1",
+    "supertest": "^6.2.1"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "nyc": {
+    "all": true,
+    "include": ["routes", "services", "lib", "utils"]
   }
 }
